--- a/src/app/shared/components/main-header/main-header.component.html
+++ b/src/app/shared/components/main-header/main-header.component.html
@@ -1,5 +1,10 @@
 <ng-container>
   <section class="side">
+    <a href="/"
+      ><img src="assets/images/book-play.ru.png" alt="Book-play.ru"
+    /></a>
+  </section>
+  <section class="main">
     <button
       mat-fab
       extended
@@ -11,10 +16,6 @@
       <mat-icon>menu</mat-icon>
       Меню
     </button>
-  </section>
-  <section class="main">
     <player-button *ngIf="showPlayerButton$ | async"></player-button>
-    <img src="favicon.ico" alt="Book-play.ru" class="main" />
-    <h1>Book-Play.Ru</h1>
   </section>
 </ng-container>
