--- a/src/app/shared/components/main-header/main-header.component.scss
+++ b/src/app/shared/components/main-header/main-header.component.scss
@@ -7,33 +7,30 @@
   height: $header-height;
   gap: $default-padding;
 
+  button {
+    border-radius: $default-border-radius;
+  }
+
   section.side {
     display: flex;
     justify-content: center;
     width: $main-menu-width;
     padding: $default-padding;
 
-    button {
-      width: calc(100% - $default-padding);
-      border-radius: $default-border-radius;
+    a {
+      display: flex;
+      justify-content: center;
+
+      img {
+        height: $header-height - $default-padding;
+        opacity: 0.85;
+      }
     }
   }
 
   section.main {
     display: flex;
     align-items: center;
-    gap: 10px;
-
-    img.main {
-      width: 2rem;
-      height: 2rem;
-    }
-
-    h1 {
-      display: inline-block;
-      margin: 0;
-      white-space: nowrap;
-      color: rgb(200 200 200);
-    }
+    gap: $default-padding;
   }
 }
