Reorder logo and player button in main header, update styles, and add click event to close sidenav

--- a/src/app/core/components/main/main.component.html
+++ b/src/app/core/components/main/main.component.html
@@ -10,7 +10,7 @@
         : 'hidden'
     "></mat-progress-bar>
   <mat-sidenav-container>
-    <mat-sidenav #sidenav mode="side" opened="true">
+    <mat-sidenav #sidenav mode="side" opened="true" (click)="sidenav.close()">
       <main-menu></main-menu>
       <copyright-owner></copyright-owner>
       <copyright></copyright>
