--- a/src/app/core/styles/main.scss
+++ b/src/app/core/styles/main.scss
@@ -8,8 +8,8 @@ body {
   margin: 0;
   width: 100%;
   height: 100%;
-  min-width: 500px;
-  min-height: 600px;
+  min-width: 530px;
+  min-height: 100vh;
 }
 
 html {
