--- a/src/app/shared/components/main-header/main-header.component.html
+++ b/src/app/shared/components/main-header/main-header.component.html
@@ -1,21 +1,20 @@
 <ng-container>
-  <section class="side">
-    <button
-      mat-fab
-      extended
-      color="success"
-      matTooltip="Показать главное меню"
-      matTooltipPosition="below"
-      matTooltipShowDelay="1500"
-      (click)="menuClick.emit()">
-      <mat-icon>menu</mat-icon>
-      Меню
-    </button>
-  </section>
-  <section class="main">
-    <player-button *ngIf="showPlayerButton$ | async"></player-button>
-    <a href="/"
-      ><img src="assets/images/book-play.ru.png" alt="Book-play.ru"
-    /></a>
-  </section>
+  <button
+    mat-fab
+    extended
+    color="success"
+    class="menu"
+    matTooltip="Показать главное меню"
+    matTooltipPosition="below"
+    matTooltipShowDelay="1500"
+    (click)="menuClick.emit()">
+    <mat-icon>menu</mat-icon>
+    Меню
+  </button>
+  @if (showPlayerButton()) {
+    <player-button></player-button>
+  }
+  <a href="/"
+    ><img src="assets/images/book-play.ru.png" alt="Book-play.ru"
+  /></a>
 </ng-container>
