Refactor `main-header.component` to use Angular signals, update `main-menu` and `events-state-service`, rename `speech.service` to `tts-api.service`, and adjust related usages

--- a/src/app/modules/player/components/book-canvas/book-canvas.component.html
+++ b/src/app/modules/player/components/book-canvas/book-canvas.component.html
@@ -4,7 +4,7 @@
       <canvas-skeleton></canvas-skeleton>
     </div>
   }
-  @if (book()) {
+  @if (bookData) {
     <div
       class="scrollable-canvas"
       [class.scrolling]="scrolling()"
