Update author display format and fix API URL and component templates

--- a/src/app/modules/player/components/book-canvas/book-canvas.component.html
+++ b/src/app/modules/player/components/book-canvas/book-canvas.component.html
@@ -4,14 +4,13 @@
       <canvas-skeleton></canvas-skeleton>
     </div>
   }
-  @if (bookData) {
+  @if (bookData?.bookTitle) {
     <div
       class="scrollable-canvas"
       [class.scrolling]="scrolling()"
       cdkVirtualScrollingElement>
       <h1>
-        {{ bookData.author ? bookData.author.first : '' }}
-        {{ bookData.author ? bookData.author.last : '' }} -
+        {{ bookData.author.first }} {{ bookData.author.last }} -
         {{ bookData.bookTitle }}
       </h1>
 
