Work with library new API and view

--- a/src/app/modules/player/components/book-canvas/book-canvas.component.html
+++ b/src/app/modules/player/components/book-canvas/book-canvas.component.html
@@ -4,7 +4,7 @@
       <canvas-skeleton></canvas-skeleton>
     </div>
   }
-  @if (bookData?.bookTitle) {
+  @if (bookData.bookTitle) {
     <div
       class="scrollable-canvas"
       [class.scrolling]="scrolling()"
